# PersonalProjects

./: .gitignore  README.md
BillPay/: README.md
BillPay/bill-pay/: package-lock.json  package.json
C-Tests/: arrayInitalization.c
DnD-5e-Player-App/: .gitignore  README.md
DnD-5e-Player-App/src/: Enums.h  main.cpp
PayrollApplication/: .gitignore  README.md  build.gradle  database.properties
PayrollApplication/database/: Payroll_Test_DB_Creation.txt  Payroll_Test_DB_TestData.txt
PayrollApplication/sql/: Smallb_Payroll_Creation.txt  Smallb_Payroll_TestData.sql
ReactCalculatorApplication/calculator-app/: package-lock.json
Smallb-Payroll-Application/: README.md
Smallb-Payroll-Application/Smallb-Payroll-Backend/: .gitignore  README.md  build.gradle
Smallb-Payroll-Application/smallb-payroll/: .gitignore  README.md  package-lock.json  package.json
Smallb-Payroll-Application/smallb-payroll-server/: General_Info_To_Remember.txt  README.md  build.gradle
Study-Qt-App/: README.md
Study-Qt-App/StudyRight/: CMakeLists.txt  main.cpp  main.qml  qmldir
Study-Qt-App/StudyRight/src/components/: FlipButton.qml  MenuButton.qml  RightButton.qml  WrongButton.qml
Study-Qt-App/StudyRight/src/screens/: Answer.qml  Home.qml  Question.qml
Study-Qt-App/StudyRight/src/themes/basic/: Colors.qml  Style.qml
Study-Qt-App/StudyRight/src/themes/basic/fonts/: FlashcardButtonText.qml  HeaderMainText.qml  HeaderSubText.qml  MenuButtonText.qml
Sudoku-Solver/: .gitignore  README.md  SudokuInput.txt  build.gradle
calculator-app/: README.md
udemy/: README.md
(+245 files in other folders)
